version/0.35/_sources/api/solver/_autosummary/settings/input_parameters_2.rst.txt
:orphan:

.. _input_parameters_2:

input_parameters
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.input_parameters_2
    :show-inheritance:

.. rubric:: Attributes

================================   ============================================

Attribute                                                               Summary

================================   ============================================
:ref:`scheme_proc <scheme_proc>`       Use input parameter in scheme-procedure.

:ref:`udf_side <udf_side>`                   Use input parameter in solver-udf.

:ref:`expression <expression_9>`                            'expression' child.

================================   ============================================

.. rubric:: Methods

====================   ==============================

Method                                        Summary

====================   ==============================
:ref:`list <list_5>`       List all input parameters.

====================   ==============================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`parameters <parameters>`       'parameters' child.

==============================   =======================

